# documentai

./: README.md  main.py  pyproject.toml  requirements.txt  settings.py
database/: bootstrap.py  crud.py  database  models.py  schemas.py
