[tool.poetry]
name = "documentai-api"
version = "0.1.0"
description = ""
authors = ["Benjamin <christianbfc97@gmail.com>"]
readme = "README.md"
packages = [{include = "documentai_api"}]

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.23"
fastapi = "^0.104.1"
python-multipart = "^0.0.6"
boto3 = "^1.29.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
